<resources>
    <string name="app_name">Daily Goals</string>
    <string name="add_button">Add</string>
    <string name="done_button">Done</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_task">Add new task</string>
    <string name="settings">Settings</string>
    <string name="ask_for_rating">Thanks for trying out this app, please rate it on play store if you liked it.</string>
    <string name="credits">This app was made by Pratikshit (Faulty Apps founder), more along the way</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="share">Share</string>
    <string name="title_activity_explore_tasks">ExploreTasks</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="no_data">NO DATA</string>
    <string name="reminder_delay_info">We will remind you about completing your tasks after you have closed the app. You can choose here how many HOURS you want to wait until we remind you</string>
    <string name="reminder_enable_info">Enable reminders to get notified about the pending tasks you may have today.</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="notification_settings">Notification settings</string>
</resources>