<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/layout_about_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/transparent_med"
        android:orientation="vertical">



        <TextView
            android:id="@+id/tv_ask_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:textColor="@color/white"
            android:text="@string/ask_for_rating"/>

        <Button
            android:id="@+id/button_rate"
            android:layout_below="@+id/tv_ask_rating"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/rate_this_app"/>

        <TextView
            android:id="@+id/tv_about"
            android:layout_below="@+id/button_rate"
            android:text="@string/credits"
            android:gravity="center"
            android:textColor="@color/colorBorderListItem"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</layout>