<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vModel"
            type="com.chan.dailygoals.settings.SettingsViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_app_gradient"
        android:orientation="vertical"
        tools:context=".settings.SettingsActivity">


        <Button
            android:id="@+id/btn_display_notification"
            style="@style/SettingsButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="0dp"
            android:text="@string/notification_settings" />

        <LinearLayout
            android:id="@+id/ll_notification_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_button_margin"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="@dimen/standard_button_margin"
            android:background="@drawable/title_item_bg"
            android:orientation="vertical"
            android:padding="4dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminder_enable_info" />

            <Button
                android:id="@+id/btn_notification_enabling"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="@color/colorAccent"
                app:strokeColor="@color/white" />

            <TextView
                android:id="@+id/tv_info_reminder_delay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminder_delay_info" />

            <LinearLayout
                android:id="@+id/ll_reminders_set_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_decrease_reminder_delay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/weakest_transparent"
                    android:padding="0dp"
                    android:src="@drawable/ic_remove"
                    android:text="--"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    app:strokeColor="@color/white" />

                <TextView
                    android:id="@+id/tv_set_reminder_delay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ImageButton
                    android:id="@+id/btn_increase_reminder_delay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/weakest_transparent"
                    android:padding="-16dp"
                    android:src="@drawable/ic_add"
                    android:text="+"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    app:strokeColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/tv_logout"
            style="@style/SettingsButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/logout" />

        <Button
            android:id="@+id/tv_about"
            style="@style/SettingsButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about" />


    </LinearLayout>
</layout>